WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238271
[iOS] Mail compose web view no longer scrolls to reveal selection upon showing the keyboard
https://bugs.webkit.org/show_bug.cgi?id=238271
Summary
[iOS] Mail compose web view no longer scrolls to reveal selection upon showin...
Wenson Hsieh
Reported
2022-03-23 10:32:29 PDT
rdar://89821087
Attachments
Patch
(10.51 KB, patch)
2022-03-23 11:24 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-03-23 11:24:13 PDT
Created
attachment 455526
[details]
Patch
EWS
Comment 2
2022-03-23 15:08:19 PDT
Committed
r291770
(
248800@main
): <
https://commits.webkit.org/248800@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455526
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug