[iOS] Mail compose web view no longer scrolls to reveal selection upon showing the keyboard https://bugs.webkit.org/show_bug.cgi?id=238271 rdar://89821087

Reviewed by Tim Horton.

Source/WebKit:

When a certain UIKit feature is enabled on certain builds of iOS, Mail compose no longer scrolls to reveal the
selection range or caret. This is because we have logic to defer scrolling/zooming to reveal the selection after
focusing the body element, for reasons outlined in trac.webkit.org/r288178. However, when the feature flag is
enabled, UIKeyboardWillShowNotification is no longer fired synchronously underneath the call to
`-reloadInputViews`, which means that `isKeyboardAnimatingIn()` will (most of the time) return false upon
calling `-_zoomToRevealFocusedElement` when receiving the next post-layout editor state update.

To mitigate this, add a new boolean flag, `_waitingForKeyboardToStartAnimatingInAfterElementFocus`, that's set
right before we reload input views when focusing an element that requires the keyboard (either software or
hardware), and unset when we observe the "WillShow" notification. In addition to checking
`_page->isKeyboardAnimatingIn()` when determining whether to defer zooming, we check this new flag as well.

Covered by an existing layout test (which currently fails when the aforementioned UIKit feature is enabled):
editing/selection/ios/scroll-to-reveal-selection-with-keyboard-avoidance-disabled.html

* UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _keyboardWillShow:]):
* UIProcess/ios/WKContentViewInteraction.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView cleanUpInteraction]):
(-[WKContentView _keyboardWillShow]):
(-[WKContentView _zoomToRevealFocusedElement]):
(-[WKContentView _elementDidFocus:userIsInteracting:blurPreviousNode:activityStateChanges:userObject:]):
(-[WKContentView _elementDidBlur]):

LayoutTests:

While I'm here, adjust the test to ensure that the keyboard is hidden afterwards. When running this test back to
back with the relevant UIKit feature flag enabled, it sometimes fails without this adjustment, due to keyboard
disappearance notifications triggered from prior test invocations being fired in subsequent test invocations.

* editing/selection/ios/scroll-to-reveal-selection-with-keyboard-avoidance-disabled.html:



Canonical link: https://commits.webkit.org/248800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291770 268f45cc-cd09-0410-ab3c-d52691b4dbfc